# BackpackDungeon

./: .gitignore  Anchor.toml  Cargo.toml  README.md  README_EN.md  package.json  pnpm-lock.yaml  start.sh  tsconfig.base.json
apps/web/: next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/dungeon/: battle-sim.ts  dungeon.module.css  page.tsx  wallet-button.tsx
apps/web/app/dungeon/components/: ActionButton.tsx  BattleArena.tsx  CombatLog.tsx  HpBar.tsx  StatPill.tsx  TxStatusCard.tsx
apps/web/app/i18n/: I18nProvider.tsx  LanguageToggle.tsx  backpackItems.ts  dictionaries.ts  types.ts  useI18n.ts
apps/web/idl/: packrun.json
apps/web/lib/solana/: anchorClient.ts  constants.ts  converters.ts  dungeonQueries.ts  dungeonTxs.ts  pdas.ts  shopMath.ts
docs/: backpack-effects.md
programs/packrun/: Cargo.toml
programs/packrun/src/: lib.rs
scripts/: init-all-locations.mjs  init-daily-dungeon.mjs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-ATJp87TTvRJv1cf3w5U2J5BTCGd1oTWCx2tK7s7t1Phx.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/snapshot/100/: 0.3  100.5  14.1  3.2  82.4
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1777170088464447  MANIFEST-000021
test-ledger/snapshots/100/: 100  obsolete_accounts  status_cache
tests/: packrun.anchor.test.mjs  packrun.gameplay.test.mjs  packrun.test.mjs
(+24 files in other folders)
