[package]
name = "packrun"
version = "0.1.0"
description = "BackpackDungeon Packrun Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "packrun"

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-sha256-hasher = "2.3.0"
